* update support check signature (pff)
* move shell item code into libfwsi (check)
* add libfvalue

API
* add functions
  - for shell item
  - for icon location block ?
  - for special and/or known folder identifier

Release:
* check TODOs
* configure
 - check inclusion local library functions
* update manuals
* update macosx package files
* automated tests

Bindings:
* python
* .net
* java

20120309
* worked on Python bindings (pylnk)
  - worked on get/set attribute functions

20120307
* worked on Python bindings (pylnk)
  - added parsing of codepage string

20120306
* worked on Python bindings (pylnk)
  - added passing of file object

20120305
* worked on Python bindings (pylnk)
* updated libnotify, libsystem, libbfio, libfwsi
* added dpkg files
* added liblnk.rc

20120102
* 2012 update

20111112
* updated libsystem, libcstring

20111101
* updated libcstring, libsystem, libuna, libbfio, libfdatetime
* added windows codepage 932 and 936 support
* updated lnkinput

20111030
* updated configure.ac and m4 files

20111009
* updated configure.ac and m4 files
* updated common
* updated libsystem, libuna, libbfio, libfdatetime
* updated pc and spec file

20110828
* updated configure.ac, common, libsystem, libbfio, 

20110711
* bug fix for WINAPI compilation, due to recent changes
* updated msvscpp files
* updated manuals

20110710
* worked on more API functions
* refactored data blocks to separate files

20110707
* added detailed version information
* updated msvscpp files, added VSDebug
* code clean up
* worked on more API functions

20110706
* updated README.mingw
* updated configure
* updated codepage definitions
* updated common, libcstring, libsystem, libuna, libbfio, libfdatetime,
  libfguid,
* added liblnk_get_access_flags_read, liblnk_get_codepage, liblnk_set_codepage
* code clean up
* added tests and examples
* filetime added microseconds precision

20110111
* updated configure.ac
* updated common, libcstring, libsystem, libuna, libbfio, 

20110104
* 2011 update